[package]
name = "ray-tracing-rust"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "in_one_weekend"
path = "src/bin/in_one_weekend.rs"
test = false
bench = false

[[bin]]
name = "the_next_week"
path = "src/bin/the_next_week.rs"
test = false
bench = false

[[bin]]
name = "the_rest_of_your_life"
path = "src/bin/the_rest_of_your_life.rs"
test = false
bench = false

[[bin]]
name = "pi"
path = "src/bin/pi.rs"
test = false
bench = false

[[bin]]
name = "integrate_x_sq"
path = "src/bin/integrate_x_sq.rs"
test = false
bench = false

[[bin]]
name = "sphere_importance"
path = "src/bin/sphere_importance.rs"
test = false
bench = false

[[bin]]
name = "sphere_plot"
path = "src/bin/sphere_plot.rs"
test = false
bench = false

[[bin]]
name = "cos_cubed"
path = "src/bin/cos_cubed.rs"
test = false
bench = false

[[bin]]
name = "cos_density"
path = "src/bin/cos_density.rs"
test = false
bench = false

[dependencies]
rand = "0.8.5"
image = "0.24.2"

[profile.dev]
opt-level = 3

[profile.release]
debug = true